--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <!--bootstrap-->
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <!--main-->
-    <link rel="stylesheet" href="./css/style.css">
-    <!--google fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Courgette">
-    <!-- font awesome-->
-    <!-- for local copies of font awesome, ensure webfont folder is also in local root directory-->
-    <link rel="stylesheet" href="./css/all.min.css">
-    </head>
-<body>
-    <div class="container">
-        <div class="row max-height align-items-center text-center">
-            <div class="col">
-                <button class="btn btn-outline-secondary">Click Me!</button>
-            </div> 
+    <!-- bootstrap css -->
+    <!-- main css -->
+    <link rel="stylesheet" href="css/main.css">
+    <!-- google fonts -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
+    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+
+    <!-- font awesome -->
+    <title>Hex Color</title>
+    <!-- script js -->
+    <script defer src="js/app.js"></script>
+</head>
+
+<body>
+
+    <div class="container">
+        <div class="row max-height align-items-center">
+            <div class="col-10 col-md-6 mx-auto text-center">
+                <h1 class=text-uppercase>hex color :<span id="hex-value"></span></h1>
+                <a href="#" id="btn" class="btn btn-secondary text-uppercase my-2">click me</a>
+            </div>
         </div>
-               
     </div>
-    
-    <!--jQuery-->
-    <script src="./js/jquery-3.4.1.min.js"></script>
-    <!--bootstrap-->
-    <script src="./js/bootstrap.bundle.min.js"></script>
-    <script src="./js/script.js"></script>
+
+
+
+
 </body>
+
 </html>
